# sentry-minimal-example

./: Cargo.toml
src/: main.rs
